--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,17 @@ h1{
   margin: 0;
   margin-bottom: 0.5rem;
 }
+.input{
+  border: 1px solid #333;
+  border-radius: 0.3rem;
+  padding: 0.25rem;
+  width: 7rem;
+}
+
+select{
+  margin-left: .5rem;
+}
+.equals{
+  font-weight: bold;
+  font-size: 2rem;
+}
