--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,48 @@
-body{
-  margin: 0px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  text-align: center;
-  background: rgb(36,199,204);
-  background: linear-gradient(90deg, rgba(36,199,204,0.9920343137254902) 26%, rgba(104,74,196,1) 93%);
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,400;1,500&display=swap');
+
+section{
+  min-height: 90vh;
+  /* background: rgb(36,199,204);
+  background: linear-gradient(90deg, rgba(36,199,204,0.9920343137254902) 26%, rgba(104,74,196,1) 93%); */
+  background-color: #f2f2f5;
 }
 
-h1{
-  margin: 0;
-  margin-bottom: 0.5rem;
+.navbar-brand{
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 32px;
+  font-family: 'Lobster', cursive;
 }
+
+.banner{
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 530px;
+  margin-bottom: 30px;
+}
+
+.des{
+  font-size: 20px;
+  margin-bottom: 20px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+}
+
+.input-wrapper{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap-reverse;
+}
+
 .input{
   border: 1px solid #333;
   border-radius: 0.3rem;
   padding: 0.25rem;
-  width: 7rem;
+  width: 17rem;
 }
 
 select{
@@ -26,4 +51,15 @@ select{
 .equals{
   font-weight: bold;
   font-size: 2rem;
+}
+
+.footer{
+  margin-top: -54px;
+  padding: 1rem;
+  background-color: #0A192F;
+  color: #fff !important;
+}
+.footer a{
+  color: #fff;
+  margin-left: 5px;
 }
